--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -35,6 +35,7 @@ body {
   border-radius: 10px;
   box-shadow: 3px 5px 8px grey;
   padding: 16px 16px 20px 16px;
+  margin-top: -10px;
 }
 .flex-box img {
   width: 100%;
